@@ -23,12 +23,12 @@ import java.util.Map;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.pig.EvalFunc;
 import org.apache.pig.backend.executionengine.ExecException;
+import org.apache.pig.data.DataBag;
 import org.apache.pig.data.DataType;
 import org.apache.pig.data.Tuple;
 import org.apache.pig.impl.io.InterStorage;
 import org.apache.pig.impl.io.ReadToEndLoader;
 import org.apache.pig.impl.util.UDFContext;
-import org.apache.pig.data.DataBag;
 
 /**
  * ReadScalars reads a line from a file and returns it as its value. The
@@ -40,22 +40,26 @@ public class ReadScalars extends EvalFunc<Object> {
     private String scalarfilename = null;
   //  private String charset = "UTF-8";
     private Object value = null;
-    
+
     // in-core input : used by illustrator
     private Map<String, DataBag> inputBuffer = null;
 
+    private boolean valueLoaded = false;
+
     /**
      * Java level API
-     * 
+     *
      * @param input
      *            expects a single constant that is the name of the file to be
      *            read
      */
     @Override
     public Object exec(Tuple input) throws IOException {
-        if (value == null) {
-            if (input == null || input.size() == 0)
+        if (!valueLoaded) {
+            if (input == null || input.size() == 0) {
+                valueLoaded = true;
                 return null;
+            }
 
             int pos;
             if (inputBuffer != null)
@@ -66,6 +70,7 @@ public class ReadScalars extends EvalFunc<Object> {
                 if (inputBag == null || inputBag.size() ==0)
                 {
                     log.warn("No scalar field to read, returning null");
+                    valueLoaded = true;
                     return null;
                 } else if (inputBag.size() > 1) {
                     String msg = "Scalar has more than one row in the output.";
@@ -73,18 +78,19 @@ public class ReadScalars extends EvalFunc<Object> {
                 }
                 Tuple t1 = inputBag.iterator().next();
                 value = t1.get(pos);
+                valueLoaded = true;
                 return value;
             }
-            
+
             ReadToEndLoader loader;
             try {
                 pos = DataType.toInteger(input.get(0));
                 scalarfilename = DataType.toString(input.get(1));
-                
+
                 // Hadoop security need this property to be set
                 Configuration conf = UDFContext.getUDFContext().getJobConf();
                 if (System.getenv("HADOOP_TOKEN_FILE_LOCATION") != null) {
-                    conf.set("mapreduce.job.credentials.binary", 
+                    conf.set("mapreduce.job.credentials.binary",
                             System.getenv("HADOOP_TOKEN_FILE_LOCATION"));
                 }
                 loader = new ReadToEndLoader(
@@ -97,19 +103,21 @@ public class ReadScalars extends EvalFunc<Object> {
                 Tuple t1 = loader.getNext();
                 if(t1 == null){
                     log.warn("No scalar field to read, returning null");
+                    valueLoaded = true;
                     return null;
                 }
                 value = t1.get(pos);
                 Tuple t2 = loader.getNext();
                 if(t2 != null){
-                    String msg = "Scalar has more than one row in the output. " 
+                    String msg = "Scalar has more than one row in the output. "
                         + "1st : " + t1 + ", 2nd :" + t2;
-                    throw new ExecException(msg);   
+                    throw new ExecException(msg);
                 }
-                
+                valueLoaded = true;
+
             } catch (Exception e) {
                 throw new ExecException(e.getMessage());
-            } 
+            }
         }
         return value;
     }
@@ -117,5 +125,6 @@ public class ReadScalars extends EvalFunc<Object> {
     public void setOutputBuffer(Map<String, DataBag> inputBuffer) {
         this.inputBuffer = inputBuffer;
         value = null;
+        valueLoaded = false;
     }
 }
