@@ -32,6 +32,8 @@ PIG-3480: TFile-based tmpfile compression crashes in some cases (dvryaboy via an
 
 BUG FIXES
 
+PIG-2629: Wrong Usage of Scalar which is null causes high namenode operation (rohini)
+
 PIG-3593: Import jython standard module fail on cluster (daijy)
 
 PIG-3576: NPE due to PIG-3549 when job never gets submitted (lbendig via cheolsoo)
